--- a/index.html
+++ b/index.html
@@ -26,20 +26,28 @@
                 border-radius: 13px;
                 text-decoration: none;
                 color: #25291c;
+                position: absolute;
+                top: 35%;
+                left: 1%;
             }
             .pl2 {
                 position: absolute;
-                top: 30%;
+                top: 50%;
                 background-color: #ffb700;
                 padding: 20px;
                 border-radius: 13px;
                 text-decoration: none;
                 color: #25291c;
             }
+            .Di {
+                height: 80px;
+            }
         </style>
+        <link rel="icon" href="Icon.png">
     </head>
     <body>
         <p class="p1">Hello This Is Game Store</p>
+        <img class="Di" src="Duck Icon.png" alt="">
         <a class="pl1" href="Duck Game2.html">Play Duck Game</a>
         <br>
         <a class="pl2" href="android\app-release.apk">download Duck Game Apk</a>
